Fixed hover overflow in Guitar page

--- a/style.css
+++ b/style.css
@@ -319,6 +319,8 @@ nav ul li {
 
 .guitar-list-img {
     transition: all 0.4s ease;
+    position: relative;
+    z-index: 100;
 }
 
 .guitar-list-img:hover {
@@ -345,6 +347,7 @@ nav ul li {
     flex: 1 0 auto;
     position: fixed;
     overflow: hidden;
+    z-index: 500;
 }
 
 .l-main {
